@@ -6,6 +6,7 @@
 - FIX: When migrating from ivyde alpha to ivyde beta eclipse is throwing NPE at startup (IVYDE-136) (thanks to Daniel Becheanu)
 - FIX: The retrieve configuration doesn't support '*' as accepted types (IVYDE-137) (thanks to Daniel Becheanu)
 - FIX: NPE when a project:/// path is used and path does not exist (IVYDE-144)
+- FIX: project://[projectname]/ scheme for settings only work with java projects, not simple projects (IVYDE-145)
 
   version 2.0.0 beta1
 ==========================
